# com.devture.ansible.role.systemd_service_manager

./: README.md
defaults/: main.yml
docs/: restart-mode-comparison.md
downtime-benchmarker/: .pre-commit-config.yaml  Cargo.toml  README.md  justfile  mise.toml  targets.yml.example
downtime-benchmarker/src/: main.rs
meta/: main.yml
tasks/: main.yml  restart_specified.yml  start.yml  start_specified_async.yml  stop.yml  stop_specified.yml  stop_specified_async.yml  validate_config.yml
tasks/util/: start_priority_batch.yml
